# HA_LP_Sensor

./: .gitignore  .gitmodules  README.md
software/Ai-mqtt-lib/driver/: aiio_wifi.c
software/Ai-mqtt-lib/system/: aiio_os_port.c
software/ha_lp_sensor/: CMakeLists.txt  Makefile  flash_prog_cfg.ini  proj.conf
software/ha_lp_sensor/bl616dk/: bl616_flash.ld
software/ha_lp_sensor/bl616dk/config/: partition_cfg_2M.toml
software/ha_lp_sensor/compoents/wifi/: wifi_event.c  wifi_event.h
software/ha_lp_sensor/components/HomeAssistant/: dev_ha.c  dev_ha.h
software/ha_lp_sensor/components/device_state/: device_state.c  device_state.h
software/ha_lp_sensor/components/flash/: easy_flash.c  easy_flash.h
software/ha_lp_sensor/components/sensor/: batty_adc.c  dev_sensor.h  sht30.c
software/ha_lp_sensor/components/wifi/: user_blufi.c  wifi_event.c  wifi_event.h
software/ha_lp_sensor/config_2M_board/: bl616_flash.ld  board.c
software/ha_lp_sensor/main/: main.c
software/ha_lp_sensor/systemConfig/: lwipopts_user.h  mbedtls_sample_config.h
